--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,13 @@
 		</dependency>
 		
 		
+		<dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>19.0</version>
+        </dependency>
+		
+		
 		 <dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
